READMEのリンク付けた。

--- a/unicorn.conf
+++ b/unicorn.conf
@@ -1,4 +1,5 @@
 listen "/tmp/kaomoji.n-at.me.sock"
+# listen "localhost:3000"
 worker_processes 4
 pid "tmp/pids/unicorn.pid"
 stderr_path "log/unicorn.log"
